@@ -4,7 +4,7 @@ ACLOCAL = $(top_srcdir)/aclocal.sh
 
 bin_PROGRAMS = music eventsource
 
-music_SOURCES = music.cc application_map.cc application_map.hh
+music_SOURCES = music.cc application_mapper.cc application_mapper.hh
 music_CXXFLAGS = -I$(top_srcdir)/src -I$(top_srcdir) @MPI_CXXFLAGS@
 music_LDADD = $(top_builddir)/src/libmusic.la $(top_builddir)/rudeconfig/librudeconfig.la @MPI_LDFLAGS@
 
