@@ -1,6 +1,6 @@
 /*
  *  This file is part of MUSIC.
- *  Copyright (C) 2007 CSC, KTH
+ *  Copyright (C) 2007, 2008 INCF
  *
  *  MUSIC is free software; you can redistribute it and/or modify
  *  it under the terms of the GNU General Public License as published by
@@ -16,19 +16,32 @@
  *  along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
 
-#ifndef MUSIC_APPLICATION_MAP_HH
+#ifndef MUSIC_APPLICATION_MAPPER_HH
 
 #include <istream>
 #include <map>
 
+#include "rudeconfig/src/config.h"
+
 #include <music/configuration.hh>
 
-class application_map {
-  std::map<std::string, MUSIC::configuration*> configs;
-public:
-  application_map (std::istream* config_file);
-  MUSIC::configuration* configuration_for_rank (int rank);
-};
+namespace MUSIC {
 
-#define MUSIC_APPLICATION_MAP_HH
+  class application_mapper {
+    std::map<std::string, MUSIC::configuration*> configs;
+    application_map* _applications;
+    connectivity* _connectivity_map;
+    std::string selected_name;
+    void map_sections (rude::Config* cfile);
+    void map_applications ();
+    void select_application (int rank);
+    void map_connectivity (rude::Config* cfile);
+  public:
+    application_mapper (std::istream* config_file, int rank);
+    MUSIC::configuration* config ();
+  };
+
+}
+
+#define MUSIC_APPLICATION_MAPPER_HH
 #endif
